to True, then the default merge method will be used.  In earlier versions, this
configuration fell back to the global c['mergeRequests'] parameter's value.  To
avoid this, remove `mergeRequests=True` from any BuilderConfig constructor
invocations.

*** The `Status.getBuildSets` method now returns its result via Deferred.

** Scheduler Improvements

*** Nightly scheduler now accepts a change_filter argument

** SQLAlchemy & SQLAlchemy-Migrate

Buildbot now uses SQLAlchemy as a database abstraction layer.  This will give
us greater inter-database compatibility and a more stable and reliable basis
for this core component of the framework.  SQLAlchemy-Migrate is used to manage
changes to the database schema from version to version.

*** Postgres support

Buildbot should now work with a Postgres backend just as well as it does with
MySQL or SQLite.  Buildbot is actively tested against all three backends.

** Less garish color scheme

The default color scheme for Buildbot has been modified to make it slightly
less, well, neon. Note: This will not affect already-created masters, as
their default.css file has already been created. If you currently use the
default and want to get the new version, just overwrite public_html/default.css
with the copy in this version.

* Buildbot 0.8.3 (December 19, 2010)

** Deprecations and Removals

*** Change sources can no longer call change-related methods on self.parent.
Instead, use self.master methods, e.g., self.master.addChange.

* Next Release

** PBChangeSource now supports authentication

PBChangeSource now supports the `user` and `passwd` arguments.  Users with a
publicly exposed PB port should use these parameters to limit sendchange
access.

Previous versions of Buildbot should never be configured with a PBChangeSource
and a publicly accessible slave port, as that arrangement  allows anyone to
connect and inject a change into the Buildmaster without any authentication at